Fix Bazel on properly sandboxed execution
Test Plan: Tested by launching VM

X-Origin-Diff: phab/D199
GitOrigin-RevId: d27f09e62067082ca0d6f40510c851752094b481

--- a/scripts/BUILD
+++ b/scripts/BUILD
@@ -1,6 +1,7 @@
 sh_binary(
     name = "launch",
     srcs = ["launch.sh"],
+    tags = ["local"],
     data = [
         "@//:image",
         "@//:swtpm_data",
