Use flag package for mkimage command line parsing
Test Plan: Covered by CI

X-Origin-Diff: phab/D248
GitOrigin-RevId: 3b59e11885c78e8321d8a44b22e67d85268b5765

--- a/core/BUILD
+++ b/core/BUILD
@@ -8,7 +8,10 @@ genrule(
         "smalltown.img",
     ],
     cmd = """
-    $(location @//core/cmd/mkimage) $(location @//core/build/linux_kernel:bzImage) $@ $(location @//core/build/linux_kernel:initramfs)
+    $(location @//core/cmd/mkimage) \
+        -efi $(location @//core/build/linux_kernel:bzImage) \
+        -initramfs $(location @//core/build/linux_kernel:initramfs) \
+        -out $@
     """,
     tools = [
         "@//core/cmd/mkimage",
