Added kube-controlplane binary
This adds a custom binary which contains all Kubernetes control plane
components. This is necessary since every control plane binary by itself
is around 130MiB and this combined one is only around 150MiB. This
can be cut in half to around 70MiB as soon as Kubernetes can be built
providerless by Bazel.

I'm not entirely happy with the integration, we may need gazelle
exclusions and a plan to deal with go mod since it can't resolve the
dependencies in a reasonable way.

Test Plan: Manual test with kubectl (this by itself is not runnable)

Bug: T485

X-Origin-Diff: phab/D256
GitOrigin-RevId: d76702f2cd0d71463ff891e5a44eac7b66be07f0

--- a/nogo_config.json
+++ b/nogo_config.json
@@ -15,12 +15,12 @@
     "exclude_files": {
       "external/com_github_golang_protobuf/": "third_party",
       "external/com_github_grpc_ecosystem_grpc_gateway/runtime/": "third_party",
-      "external/kubernetes/staging/src/k8s.io/legacy-cloud-providers/vsphere/": "third_party"
+      "external/kubernetes/": "third_party"
     }
   },
   "unreachable": {
     "exclude_files": {
-      "external/kubernetes/vendor/gopkg.in/gcfg.v1": "third_party",
+      "external/kubernetes/": "third_party",
       "external/bazel_gazelle/pathtools": "third_party"
     }
   },
@@ -37,7 +37,17 @@
   },
   "unusedresult": {
     "exclude_files": {
-      "external/kubernetes/vendor/github.com/docker/spdystream": "third_party"
+      "external/kubernetes/": "third_party"
+    }
+  },
+  "structtag": {
+    "exclude_files": {
+      "external/kubernetes/": "third_party"
+    }
+  },
+  "printf": {
+    "exclude_files": {
+      "external/kubernetes/": "third_party"
     }
   }
 }
