Run "bazel test //..." in CI
This will build all buildable targets and test all testable targets.

The hardcoded Harbormaster rules have been removed in Phabricator.

Adds a simple test for booting Smalltown.

BUILD files that are injected into repositories have been renamed to
BUILD.repo to ensure that Bazel does not recognize them as local BUILD
files and attempt to build them.

Test Plan: Covered by CI :)

Bug: T483

X-Origin-Diff: phab/D262
GitOrigin-RevId: 3512a5e13430001f4e6f91d21ac503564c8fb085

--- a/core/scripts/BUILD
+++ b/core/scripts/BUILD
@@ -8,3 +8,11 @@ sh_binary(
     ],
     tags = ["local"],
 )
+
+sh_test(
+    name = "test_boot",
+    size = "small",
+    srcs = ["test_boot.sh"],
+    tags = ["local"],
+    deps = [":launch"],
+)
