--- a/nogo_config.json
+++ b/nogo_config.json
@@ -15,13 +15,15 @@
     "exclude_files": {
       "external/com_github_golang_protobuf/": "third_party",
       "external/com_github_grpc_ecosystem_grpc_gateway/runtime/": "third_party",
-      "external/kubernetes/": "third_party"
+      "external/kubernetes/": "third_party",
+      "external/com_github_denisenkom_go_mssqldb/": "third_party"
     }
   },
   "unreachable": {
     "exclude_files": {
       "external/kubernetes/": "third_party",
-      "external/bazel_gazelle/pathtools": "third_party"
+      "external/bazel_gazelle/pathtools": "third_party",
+      "external/com_github_magiconair_properties": "third_party"
     }
   },
   "assign": {
@@ -32,7 +34,8 @@
   "unsafeptr": {
     "exclude_files": {
       "external/kubernetes/vendor/github.com/modern-go/reflect2/": "third_party",
-      "external/com_github_modern_go_reflect2/": "third_party"
+      "external/com_github_modern_go_reflect2/": "third_party",
+      "sqlite3.*go": "third_party"
     }
   },
   "unusedresult": {
