--- a/core/BUILD
+++ b/core/BUILD
@@ -2,8 +2,8 @@ genrule(
     name = "initramfs",
     srcs = [
         "//core/cmd/init",
-        "//core/build/utils:mkfs.xfs",
         "//core/cmd/kube-controlplane",
+        "//third_party/xfsprogs:mkfs.xfs",
     ],
     outs = [
         "initramfs.cpio.lz4",
@@ -15,7 +15,7 @@ nod /dev/console 0600 0 0 c 5 1
 nod /dev/null 0644 0 0 c 1 3
 file /init $(location //core/cmd/init) 0755 0 0
 dir /bin 0755 0 0
-file /bin/mkfs.xfs $(location //core/build/utils:mkfs.xfs) 0755 0 0
+file /bin/mkfs.xfs $(location //third_party/xfsprogs:mkfs.xfs) 0755 0 0
 file /bin/kube-controlplane $(location //core/cmd/kube-controlplane) 0755 0 0
 EOF
     """,
