--- a/.bazelrc
+++ b/.bazelrc
@@ -1,3 +1,3 @@
 startup --batch_cpu_scheduling --io_nice_level 7
 build --jobs 12 --ram_utilization_factor 50
-test --jobs 12
+test --jobs 12 --test_output=errors
