test_boot is now a medium-sized test
We upped the timeout to 120, but Bazel had a lower timeout.

GitOrigin-RevId: 8e9581b20760746e75edc990229be78ddf7992bb

--- a/core/scripts/BUILD
+++ b/core/scripts/BUILD
@@ -23,7 +23,7 @@ sh_library(
 
 sh_test(
     name = "test_boot",
-    size = "small",
+    size = "medium",
     srcs = ["test_boot.sh"],
     # expects wants a pty, which do not exist in the sandbox
     tags = ["local"],
