Update Kubernetes to 1.18.0
Updates Kubernetes to 1.18.0 and removes patches that are no
longer needed. The directories themselves and the build code that deals
with patching is left intact since rebasing D389 and subsequent K8s work
would otherwise be unnecessarily complicated.

Test Plan: Should be covered by CI

X-Origin-Diff: phab/D470
GitOrigin-RevId: 5c7749926f0adcc8d58e3bff3ce6413bab1d797d

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,3 +1,6 @@
 startup --batch_cpu_scheduling --io_nice_level 7
 build --jobs 12 --ram_utilization_factor 50
 test --jobs 12 --test_output=errors
+
+# Build with SELinux, needed for containerd & kubelet
+build --define gotags=selinux
