--- a/core/cmd/kube-controlplane/BUILD
+++ b/core/cmd/kube-controlplane/BUILD
@@ -27,10 +27,10 @@ go_library(
         "@kubernetes//cmd/kube-apiserver/app:go_default_library",
         "@kubernetes//cmd/kube-controller-manager/app:go_default_library",
         "@kubernetes//cmd/kube-scheduler/app:go_default_library",
-        "@kubernetes//pkg/client/metrics/prometheus:go_default_library",
-        "@kubernetes//pkg/version/prometheus:go_default_library",
         "@kubernetes//staging/src/k8s.io/component-base/cli/flag:go_default_library",
         "@kubernetes//staging/src/k8s.io/component-base/logs:go_default_library",
+        "@kubernetes//staging/src/k8s.io/component-base/metrics/prometheus/restclient:go_default_library",
+        "@kubernetes//staging/src/k8s.io/component-base/metrics/prometheus/version:go_default_library",
         "@kubernetes//vendor/github.com/spf13/cobra:go_default_library",
         "@kubernetes//vendor/github.com/spf13/pflag:go_default_library",
     ],
