Add all dependencies for Kubernetes worker
Adds Kubelet, CNI plugins, containerd, runc and gVisor using a
pre-baked list of dependencies generated using scripts/gazelle-deps/sh.

This moves all dependencies of gVisor, Kubernetes, runc, etc into the
same 'namespace' of Bazel external repositories, giving us ease of
accessing code as libraries, and benefits when it comes to version
auditing.

The gazelle-deps.sh script is a temporary solution that will be replaced
ASAP, see T725.

This unblocks T486.

This is an alternative to D389.

Test Plan: `bazel build //core:image` runs and picks up the new binaries

X-Origin-Diff: phab/D487
GitOrigin-RevId: a28a25071fa2ae76b272d237ce9af777485065ff

--- a/.bazelrc
+++ b/.bazelrc
@@ -3,4 +3,10 @@ build --jobs 12 --local_ram_resources=HOST_RAM*0.5
 test --jobs 12 --test_output=errors
 
 # Build with SELinux, needed for containerd & kubelet
-build --define gotags=selinux
+build --define gotags=selinux,no_zfs,no_aufs,no_devicemapper
+
+# Build with C++17.
+build --cxxopt=-std=c++17
+
+# Set workspace status file
+build --workspace_status_command=./build/print-workspace-status.sh
