--- a/core/internal/kubernetes/BUILD.bazel
+++ b/core/internal/kubernetes/BUILD.bazel
@@ -16,8 +16,8 @@ go_library(
         "//core/internal/consensus:go_default_library",
         "//core/pkg/fileargs:go_default_library",
         "@io_etcd_go_etcd//clientv3:go_default_library",
-        "@kubernetes//staging/src/k8s.io/client-go/tools/clientcmd:go_default_library",
-        "@kubernetes//staging/src/k8s.io/client-go/tools/clientcmd/api:go_default_library",
+        "@io_k8s_client_go//tools/clientcmd:go_default_library",
+        "@io_k8s_client_go//tools/clientcmd/api:go_default_library",
         "@org_uber_go_zap//:go_default_library",
     ],
 )
