--- a/core/internal/common/supervisor/BUILD.bazel
+++ b/core/internal/common/supervisor/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "supervisor_node.go",
         "supervisor_processor.go",
         "supervisor_support.go",
+        "supervisor_testhelpers.go",
     ],
     importpath = "git.monogon.dev/source/nexantic.git/core/internal/common/supervisor",
     visibility = ["//core:__subpackages__"],
