--- a/nogo_config.json
+++ b/nogo_config.json
@@ -21,7 +21,8 @@
       "external/com_github_google_gvisor/": "third_party",
       "external/io_k8s_sigs_structured_merge_diff/": "third_party",
       "external/io_k8s_component_base/": "third_party",
-      "external/io_k8s_apiserver/": "third_party"
+      "external/io_k8s_apiserver/": "third_party",
+      "external/org_golang_google_protobuf/": "third_party"
     }
   },
   "lostcancel": {
@@ -38,7 +39,8 @@
       "external/bazel_gazelle/pathtools": "third_party",
       "external/com_github_magiconair_properties": "third_party",
       "external/com_github_ghodss_yaml": "third_party",
-      "external/io_k8s_kubectl": "third_party"
+      "external/io_k8s_kubectl": "third_party",
+      "external/org_golang_google_protobuf/": "third_party"
     }
   },
   "assign": {
